--- a/local.yml
+++ b/local.yml
@@ -17,7 +17,8 @@
   #------------
   - name: install Elrepo
     dnf:
-     name: elrepo-release
+     name: 
+      - elrepo-release
     state: present
 
   - name: Enable AlmaLinux CRB repo
