--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,17 @@
       - almalinux-release-nvidia-driver
       - nvidia-open-kmod
       - nvidia-driver
+  
+  - name: Modprobe nvidia_drm
+    modprobe:
+     name: nvidia_drm
+     state: present
+
+  - name: install cuda driver
+    yum:
+     name:
+      - nvidia-driver-cuda
+      - cuda
       
   - name: Upgrade all packages
     ansible.builtin.yum:
