--- a/local.yml
+++ b/local.yml
@@ -26,10 +26,10 @@
       - nvidia-driver-cuda
       - cuda
       
-  - name: Upgrade all packages
-    ansible.builtin.yum:
-     name: "*"
-     state: latest
+  #- name: Upgrade all packages
+   # ansible.builtin.yum:
+    # name: "*"
+     #state: latest
   
   #INSTALL REPO
   #------------
