--- a/local.yml
+++ b/local.yml
@@ -4,33 +4,7 @@
   connection: local
   become: true
   
-  tasks:
-
-  #UPGRADE/INSTALL
-  #------------
-  - name: Install Nvidia
-    dnf:
-     name:
-      - almalinux-release-nvidia-driver
-      - nvidia-open-kmod
-      - nvidia-driver
-  
-  - name: Modprobe nvidia_drm
-    modprobe:
-     name: nvidia_drm
-     state: present
-
-  - name: install cuda driver
-    dnf:
-     name:
-      - nvidia-driver-cuda
-      - cuda
-      
-  #- name: Upgrade all packages
-   # ansible.builtin.yum:
-    # name: "*"
-     #state: latest
-  
+  tasks:  
   #INSTALL REPO
   #------------
   - name: Install ELrepo
@@ -55,6 +29,31 @@
     loop:
        - https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm
        - https://mirrors.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
+
+  #UPGRADE/INSTALL
+  #------------
+  - name: Install Nvidia
+    dnf:
+     name:
+      - almalinux-release-nvidia-driver
+      - nvidia-open-kmod
+      - nvidia-driver
+  
+  - name: Modprobe nvidia_drm
+    modprobe:
+     name: nvidia_drm
+     state: present
+
+  - name: install cuda driver
+    dnf:
+     name:
+      - nvidia-driver-cuda
+      - cuda
+      
+  - name: Upgrade all packages
+    ansible.builtin.yum:
+     name: "*"
+     state: latest
       
   #DOT FILES
   #------------
