--- a/local.yml
+++ b/local.yml
@@ -61,8 +61,14 @@
   #------------
   - name: Create MNT point
     ansible.builtin.command:
-     cmd: "sudo mkdir /mnt/testing"
+     cmd: "sudo mkdir -p /mnt/aslon"
 
+  - name: Cred
+    copy:
+     src: Files/.smbcred
+     dest: /root/.smbcred
+     owner: root
+     group: root
 
   #PROGRAM DEPENDENCIES
   #------------
