--- a/local.yml
+++ b/local.yml
@@ -142,7 +142,7 @@
 
   - name: Gnome Extensions
     ansible.builtin.command:
-     cmd: "wget -O gnome-shell-extension-installer "https://github.com/brunelli/gnome-shell-extension-installer/raw/master/gnome-shell-extension-installer"
+     cmd: "wget -O gnome-shell-extension-installer 'https://github.com/brunelli/gnome-shell-extension-installer/raw/master/gnome-shell-extension-installer'"
   
   - name: make executable
     ansible.builtin.command:
