--- a/local.yml
+++ b/local.yml
@@ -36,10 +36,10 @@
       - nvidia-driver-cuda
       - cuda
       
-  - name: Upgrade all packages
-    ansible.builtin.yum:
-     name: "*"
-     state: latest
+  #- name: Upgrade all packages
+   # ansible.builtin.yum:
+    # name: "*"
+     #state: latest
       
   #DOT FILES
   #------------
